--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     grid-template-areas:
         "header header ."
         "rads thing2 ."
-        "sol sol ."
+        "sol extra ."
 }
 
 #perserverance{
