--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,14 @@ body {
     column-gap: 40px;
     grid-template-areas:
         "header header ."
-        "rads thing2 ."
+        "buttons rads  ."
         "sol extra ."
 }
 
-#perserverance{
-    grid-area: thing2;
+#scrollbuttons{
+    grid-area: buttons
 }
+
 
 #rads{
     grid-area: rads;
