--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,16 @@ body {
         "sol extra ."
 }
 
+#map_container{
+    height: 200px;
+    width: 200px;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 #scrollbuttons{
     grid-area: buttons
 }
