add grid template to map

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,9 @@ body {
 #map_container{
     height: 500px;
     width: 500px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 img {
