--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,10 @@ body {
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-row-end: 9;
+    grid-column-end: 11;
 }
 
 #scrollbuttons{
