--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-    padding: 0px;
+    padding: 40px;
     height: 100vh; 
     display: grid;
     font-family: Arial;
@@ -10,7 +10,7 @@ body {
     grid-template-areas:
         "header header ."
         "sol map model"
-        "buttons extra ."
+        "extra map model"
 }
 
 #model{
@@ -54,8 +54,8 @@ img{
 
 
 
-#rads{
-    grid-area: rads;
+#extra{
+    grid-area: extra;
 }
 
 #h1 {
