--- a/styles.css
+++ b/styles.css
@@ -14,27 +14,28 @@ body {
 }
 .twrap {
     overflow: hidden;
-    background: red;
+    width: 300px;
 }
 .tmove{
     display: flex;
 }
 .titem{
+    /* fit horizontally */
     flex-shrink: 0;
-    width: 100%;
+    width: 140%;
     box-sizing: border-box;
     padding: 10px;
     text-align: center;
 }
 
-/* kerframes is a rule that establishes waypoints at different steps of an animation. In this case, the first 'waypoint' is at 0%, meaning the scrll */
+/* kerframes is a rule that establishes waypoints at different steps of an animation. In this case, the first 'waypoint' is at 0%, meaning the first translate3D call is executed at the beginning of the animation with an argument of 100%, so the ticker starts at the beginning of the first sentence(Using 50% for example would start mid-sentence). The second 'waypoint' is at 100%, which is the end of the animation. Calling translate3d again "at" 100% completion means I can specify how early to terminate the translation animation. Passing in a negative percentage as x coordinate accomplishes this. */
 
 @keyframes ticker{
 
     /* translate3d is a css function to move an element around the page. It's three arguments are the x, y, and z coordinate for the 'translation'. For a ticker, we only need to pass a percentage into the x coordinate to move from left to right. This percentage determines starting position of ticker, and depending on the number of lines of text in the ticker, will affect the speed.*/
 
-    0%{transform: translate3d(100%,0,0);} 
-    100%{transform: translate3d(-300%,0,0);}
+    0%{transform: translate3d(140%,0,0);} 
+    100%{transform: translate3d(-500%,0,0);}
 }
 /* this attched the tmove wrapper to the keyframes, so it knows whose child elements to display on ticker. And 'Animation' accepts an argument which tells it how long animation should take */
 .tmove {animation: ticker linear 9s infinite}
